--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "cookie": "^0.4.1",
     "echarts": "^5.0.0",
+    "firebase": "^8.2.1",
     "formik": "^2.2.6",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
